update year, add image to front page

--- a/css/base.css
+++ b/css/base.css
@@ -311,6 +311,15 @@ div.art span p:hover {
 	padding:0 2vw 0 0;
 }
 
+.latest {
+	text-align:center;
+	max-width:70%;
+}
+
+img.latest {
+	max-height:60vh;
+}
+
 div.boxFixFix {
 	position:fixed;
 	top:0;
@@ -410,7 +419,7 @@ section.pageFr:target ~ div#copyright .linkFr {
 
 @media all and (max-aspect-ratio: 1/1) {
 	body {
-		font-size:3vw;
+		font-size:2.8vw;
 	}
 
 	h1 {
@@ -536,6 +545,10 @@ section.pageFr:target ~ div#copyright .linkFr {
 		margin:auto;
 		height:66vw;
 		float:none;
+	}
+
+	.latest {
+		max-width:100%;
 	}
 
 	div.art p {
